# whiteboard

./: .gitignore  default.nix
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Server.hs
common/: common.cabal
common/src/Common/: Message.hs  Route.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
