name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , containers
               , dependent-sum
               , lens
               , mtl
               , obelisk-route
               , QuickCheck
               , text
  exposed-modules:
    Common.Api
    Common.Message
    Common.Route
  ghc-options: -Wall
